Aggiunta libreria (non andrebbe fatto ma non ho sbatta), metodi per registrazione metodi con bridge e gestione main, guida per come usare questi nuovi metodi